# G4_Tesis

./: .gitignore  CMakeLists.txt  init_vis.mac  main.cpp  vis.mac
Actions/: CMakeLists.txt  H4Actions.cpp  H4Actions.hpp
Detector/: CMakeLists.txt  H4Detector.cpp  H4Detector.hpp  H4InnerSection.cpp  H4InnerSection.hpp  H4MiddleSection.cpp  H4MiddleSection.hpp  H4Module.cpp  H4Module.hpp  H4OuterSection.cpp  H4OuterSection.hpp
EventAction/: CMakeLists.txt  H4EventAction.cpp  H4EventAction.hpp
G4Macros/: gen_dataset.mac  init_vis.mac  vis.mac
PhysicList/: CMakeLists.txt  H4PhysicList.cpp  H4PhysicList.hpp
PrimaryGenerator/: CMakeLists.txt  H4PrimaryGenerator.cpp  H4PrimaryGenerator.hpp
ROOT_scripts/: analysis_ntuples.C  analysis_ntuples.cpp
ROOT_source/: CMakeLists.txt  analysis_ntuples.cpp
ROOT_source/args_manager/: CMakeLists.txt  args_manager.cpp  args_manager.hpp  usage.txt
ROOT_source/plotter/: CMakeLists.txt  hist_plotter.cpp  hist_plotter.hpp
ROOT_source/test/: CMakeLists.txt  get_data.cpp  get_data.hpp  results.cpp  results.hpp  significative_cells.cpp  significative_cells.hpp  test.cpp  test.hpp
RunAction/: CMakeLists.txt  H4RunAction.cpp  H4RunAction.hpp
SteppingAction/: CMakeLists.txt  H4SteppingAction.cpp  H4SteppingAction.hpp
TrackingAction/: CMakeLists.txt  H4TrackingAction.cpp  H4TrackingAction.hpp
bash_scripts/: merge_ntuples.sh
docs/: .gitignore
docs/poster/: beamercolorthemepurple.sty  beamerthemegemini.sty  poster.bib  poster.tex
docs/thesis/: Biblio.bib  thesis.tex
docs/thesis/HojaTitulo/: HojaTituloMSc.tex
docs/thesis/Kap1/: Kap1.tex
docs/thesis/Kap2/: Kap2.tex
docs/thesis/Kap3/: Kap3.tex
docs/thesis/Kap4/: Kap4.tex
include/: CMakeLists.txt  GeneralG4.hpp
python_scripts/: .gitignore  CMakeLists.txt  classifiers.json  ia_train.py  requirements.txt  run_ia.sh  submit.sub
python_scripts/data_mng/: root_files_mng.py  significative_cells.csv
